cmake_minimum_required(VERSION 3.15)
project(C___2012)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___2012 main.cpp ch4/03.cpp)
add_executable(ch4_03 ch4/03.cpp)
add_executable(ch4_09 ch4/09.cpp)
add_executable(ch4_11 ch4/11.cpp)
add_executable(ch4_12 ch4/12.cpp)
add_executable(ch5_03 ch5/03.cpp)
add_executable(ch5_04 ch5/04.cpp)
add_executable(ch5_05 ch5/05.cpp)
add_executable(ch5_07 ch5/07.cpp)
add_executable(ch5_10 ch5/10.cpp)
add_executable(ch5_11 ch5/11.cpp)
add_executable(ch5_12 ch5/12.cpp)